2009-08-02  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: gluon metainfo.
	action export.

	* lib/gluon.rb, lib/gluon/controller.rb, lib/gluon/erbview.rb,
	lib/gluon/po.rb, lib/gluon/rs.rb, lib/gluon/template.rb: gluon
	presentation method and template engine and erb view.

2009-07-26  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: view methods are defined at component
	class method.

	* lib/gluon/controller.rb: controller syntax is defined at
	component.

	* lib/gluon/controller.rb, lib/gluon/rs.rb: request-response
	context and controller hooks.

2009-07-21  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/cmap.rb: class-URL mapping.

2009-07-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: controller action.
	component controller.

2009-07-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: form parameters.

2009-07-07  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: controller syntax and unit test.

2009-07-05  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: redefine gluon path filter.
	redefine gluon path block.

2009-07-04  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: new syntax for controller.

	* start to restructure gluon to ruby19.

2009-01-13  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/urlmap.rb: fixed a root-id bug of class2path.

2009-01-08  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/version.rb: version 0.0.3.

	* lib/gluon/po.rb, lib/gluon/rs.rb: URL map not found exception.

2009-01-06  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb, lib/gluon/po.rb, lib/gluon/rs.rb,
	lib/gluon/urlmap.rb: path filter block for class2path `path_args'.

2009-01-04  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/urlmap.rb: obsolete `path_filter' of mount.

2008-12-10  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/builder.rb: obsolete auto_reload and Rack::Reloader is
	used.
